fixed overflow issue, more styling

--- a/src/App.css
+++ b/src/App.css
@@ -2,34 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 ul {
@@ -46,19 +23,119 @@ ul {
 
 input {
   background-color: white;
-  width: 1rem;
+  border: none;
+  width: 0.4rem;
 }
 
 .main {
   display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 2fr 1fr;
+  grid-gap: 5%;
+  grid-template-columns: 62.5% 32.5%;
+  height: 100%;
 }
 
 .left-panel {
+  display: grid;
   grid-column: 1;
+  /* grid-gap: 5px; */
+  grid-template-rows: repeat(7, 1fr);
+}
+
+.points-window {
+  grid-row: 1;
+}
+
+.board-window {
+  display: grid;
+  /* grid-gap: 5px; */
+  grid-row: 2/6;
+  grid-template-rows: repeat(4, 1fr);
+}
+
+.place-bets-window {
+  display: grid;
+  grid-row: 1;
+  grid-template-columns: repeat(6, 1fr);
+}
+
+.place-button {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 90%;
+  text-align: center;
+  width: 10%;
+}
+
+.come-bet-window {
+  grid-row: 2;
+}
+
+.field-bet-window {
+  grid-row: 3;
+}
+
+.pass-bet-window {
+  grid-row: 4;
+}
+
+.bet-button {
+  height: 90%;
+  width: 90%;
+}
+
+.accept-bets-window {
+  grid-row: 6;
+}
+
+.player-funds-window {
+  grid-row: 7;
 }
 
 .right-panel {
+  display: grid;
   grid-column: 2;
+  /* grid-gap: 5px; */
+  grid-template-rows: 3fr 3fr 1fr 1fr;
+}
+
+.results-window {
+  grid-row: 1;
+  height: 100%;
+}
+
+.activity-item {
+  font-size: 9px;
+}
+
+.previous-rolls-window {
+  grid-row: 2;
+  height: 100%;
+  max-height: 100%;
+}
+
+.overflow-list {
+  height: 80%;
+  max-height: 150px;
+  overflow: auto;
+}
+
+.dice-results-window {
+  grid-row: 3;
+}
+
+.die-roll-window {
+  grid-row: 4;
+}
+
+.roll-button {
+  border: none;
+  cursor: pointer;
+  height: 100%;
+  width: 100%;
+}
+
+.fa-dice {
+  font-size: 50px;
 }
